# hl-cli

./: .env.example  Cargo.toml  README.md
.claude/commands/: hl.md
src/: cli.rs  client.rs  confirm.rs  error.rs  main.rs  output.rs
src/commands/: batch.rs  cancel.rs  cancel_all.rs  funding.rs  init.rs  install_skill.rs  leverage.rs  market.rs  market_order.rs  mod.rs  modify.rs  oi.rs  orders.rs  place.rs  pnl.rs  search.rs  shell.rs  spread.rs  state.rs  status.rs  transfer.rs  upgrade.rs
